cargo-features = ["panic-immediate-abort"]

[package]
name = "rtic-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm", "linker-plugin-lto"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
embedded-hal = "1.0.0"
arrayvec = { version = "0.7.7", default-features = false }
stm32l0xx-hal = { version = "0.10.0", features = ["mcu-STM32L053R8Tx", "rt"] }
portable-atomic = { version = "1.13.1", features = ["unsafe-assume-single-core"] }

rtic = { git = "https://github.com/rtic-rs/rtic",version = "2.2.0", features = ["thumbv6-backend"] }
rtic-time = { git = "https://github.com/rtic-rs/rtic", version = "2.0.1" }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", version = "2.1.0", features = ["stm32_tim2", "stm32l053c8"] }

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
incremental = false
opt-level = "z"
panic = "immediate-abort"
strip = true
