cargo-features = ["panic-immediate-abort"]

[package]
name = "blog-async-test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm", "linker-plugin-lto"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
embedded-hal = "1.0.0"
arrayvec = { version = "0.7.7", default-features = false }
embassy-stm32 = { version = "0.6.0", features = ["stm32l053r8", "unstable-pac", "memory-x", "exti", "time-driver-any", "time", "low-power", "executor-interrupt"], git = "https://github.com/embassy-rs/embassy"  }
embassy-executor = { version = "0.10.0", features = ["nightly"], git = "https://github.com/embassy-rs/embassy"  }
embassy-time = { version = "0.5.1", features = [], git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy" }
critical-section = "1.2.0"

[features]
use-thread-executor = ["embassy-stm32/executor-thread"]

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = "none"
lto = "fat"
codegen-units = 1
incremental = false
opt-level = "s"
panic = "immediate-abort"
strip = true
